--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,12 +1,13 @@
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 15px 20px;
+    padding: 2px 20px;
     position: sticky;
     background-color: white;
     z-index: 100;
     top: 0;
     box-shadow: 0px 5px 8px -9px rgba(0,0,0,0.75);
+    padding-top: 10px;
 }
 
 .header__left {
@@ -25,6 +26,7 @@
     padding: 8px;
     margin-left: 10px;
     border-radius: 33px;
+    margin-bottom: 8px;
 }
 
 .header__input > input {
@@ -58,10 +60,13 @@
     border-radius: 10px;
     background-color: #eff2f5;
     border-bottom: none;
+
 }
 
 .header__option-active > .MuiSvgIcon-root {
     color: #2a7ef3;
+    padding: 0 30px;
+
 }
 
 .header__option-active {
