--- a/src/components/feed/Feed.css
+++ b/src/components/feed/Feed.css
@@ -1,3 +1,9 @@
 .feed {
-    
+    flex: 1;
+    padding: 30px 130px;
+    background-color: lime;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
