--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -10,7 +10,7 @@
     display: flex;
     position: relative;
     align-items: center;
-    padding: 15px;
+    padding: 10px;
 }
 
 .post__avatar {
@@ -27,11 +27,39 @@
 }
 
 .post__bottom {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 15px 25px;
+    /* margin-top: 10px;
+    margin-bottom: 10px; */
+    padding: 10px 25px;
 }
 
 .post__image > img {
     width: 100%;
+}
+
+.post__options {
+    padding-top: 10px;
+    border-top: 1px solid lightgray;
+    display: flex;
+    justify-content: center;
+    font-size: medium;
+    color: gray;
+    cursor: pointer;
+    padding: 15px;
+}
+
+.post__option {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    flex: 1;
+}
+
+.post__option > p {
+    margin-left: 10px;
+}
+
+.post__option:hover {
+    background-color: #eff2f5;
+    border-radius: 10px;
 }
